2011-08-24  James Robinson  <jamesr@chromium.org>

        [chromium] Update expectations for tests that no longer crash.

        * platform/chromium/test_expectations.txt:

2011-08-24  James Robinson  <jamesr@chromium.org>

        Some compositing LayoutTests flakily crashing on Mac 10.6
        https://bugs.webkit.org/show_bug.cgi?id=66740

        Reviewed by Adam Barth.

        Remove = CRASH expectations for plugin tests that should no longer crash.

        * platform/chromium/test_expectations.txt:

2011-08-24  Peter Kasting  <pkasting@google.com>

        [chromium] More test expectation updates.

        Unreviewed, test expectations update.

        * platform/chromium/test_expectations.txt:

2011-08-24  Alexey Proskuryakov  <ap@apple.com>

        Plug-in tests are flaky on Mac
        https://bugs.webkit.org/show_bug.cgi?id=66822

        Reviewed by Anders Carlsson.

        * platform/wk2/Skipped: Removed a test that was already passing in WK2 (but flaky in WK1).

2011-08-24  Alexandru Chiculita  <achicu@adobe.com>

        [CSSRegions] Fix Element::getBoundingClientRect and Element::getClientRects for content flow
        https://bugs.webkit.org/show_bug.cgi?id=66641

        Original author of the patch is Mihnea Ovidenie <mihnea@adobe.com>.

        Reviewed by David Hyatt.

        * fast/regions/flowed-content-bounding-client-rect-expected.txt: Added.
        * fast/regions/flowed-content-bounding-client-rect-horizontal-bt-expected.txt: Added.
        * fast/regions/flowed-content-bounding-client-rect-horizontal-bt.html: Added.
        * fast/regions/flowed-content-bounding-client-rect-vertical-expected.txt: Added.
        * fast/regions/flowed-content-bounding-client-rect-vertical-rl-expected.txt: Added.
        * fast/regions/flowed-content-bounding-client-rect-vertical-rl.html: Added.
        * fast/regions/flowed-content-bounding-client-rect-vertical.html: Added.
        * fast/regions/flowed-content-bounding-client-rect.html: Added.